syntax = "proto3";

package ratepb;

option go_package="github.com/Dinesh789kumar12/CarApp/definitions-store/ratepb";


message RateRequest {
    int32 CarId=1;
    string CarType=2;
}

message RateResponse {
    int32 CarId=1;
    string CarType=2;
    float price=3;
}

service RoutingService {
    rpc GetRate(RateRequest) returns (RateResponse) {};
}